--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h4>Quer aprender mais?</h4>
         
         <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
-           <ul >
+           <ul type="none">
         
            <li>1.5 - Cupcake</li>
            <li>1.6 - Donut</li>
